--- a/bower.json
+++ b/bower.json
@@ -13,9 +13,10 @@
     "tests"
   ],
   "dependencies": {
-    "socket.io-client": "~1.3.2",
-    "yaml.js": "~0.2.1",
-    "foundation": "~5.5.0",
+    "socket.io-client": "1.3.2",
+    "yaml.js": "0.2.8",
+    "jquery": "2.2.4",
+    "foundation": "5.5.3",
     "foundation-icon-fonts": "*"
   }
 }
