--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "socket.io-debug-client",
+  "private": true,
   "version": "0.0.0",
   "description": "Debug your socket.io API by chatting with it",
   "keywords": [
@@ -10,22 +11,22 @@
   ],
   "main": "gulpfile.js",
   "dependencies": {
-    "gulp": "~3.8.10"
+    "gulp": "~3.9.1"
   },
   "devDependencies": {
-    "gulp": "^3.8.10",
-    "main-bower-files": "^2.5.0",
-    "gulp-bower": "0.0.10",
-    "gulp-concat": "^2.4.3",
-    "gulp-uglify": "^1.1.0",
-    "gulp-less": "^2.0.1",
-    "gulp-minify-css": "^0.4.2",
-    "gulp-merge": "^0.1.0",
-    "gulp-debug": "^2.0.0"
+    "gulp": "^3.9.1",
+    "main-bower-files": "^2.13.1",
+    "gulp-bower": "0.0.13",
+    "gulp-concat": "^2.6.1",
+    "gulp-uglify": "^2.0.1",
+    "gulp-less": "^3.3.0",
+    "gulp-clean-css": "^3.0.3",
+    "gulp-merge": "^0.1.1",
+    "gulp-debug": "^3.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "MIT"
 }
